-- add sort by name clients and hotels

--- a/src/app/hotel/hotel.component.html
+++ b/src/app/hotel/hotel.component.html
@@ -20,7 +20,9 @@
         <thead>
             <tr>
                 <th>id</th>
-                <th>Nom</th>
+                <th>Nom
+                    <button class="btn btn-sm btn-dark" (click)="loadSortedHotels()" ><i class="fas fa-sort"></i></button>   
+                </th>
                 <th>Etoiles</th>
                 <th>Mail</th>
                 <th>Téléphone</th>
