--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -20,7 +20,11 @@
         <thead>
             <tr>
                 <th>id</th>
-                <th>Nom</th>
+                <th>Nom 
+                    <!-- <button class="btn btn-danger" (click)="loadSortedClients()" ><i [ngClass]="{'fas fa-arrow-down' : isAscSorted, 'fas fa-arrow-up' : !isAscSorted}"></i></button>    -->
+                    <!-- <button class="btn btn-danger" (click)="loadSortedClients()" ><i [ngClass]="isAscSorted ? 'fas fa-arrow-down' : 'fas fa-arrow-up' "></i></button>    -->
+                    <button class="btn btn-sm btn-dark" (click)="loadSortedClients()" ><i class="fas fa-sort"></i></button>   
+                </th>
                 <th>Email</th>
                 <th>Téléphone</th>
                 <th>Adresse</th>
